# software_quality_project

./: Makefile  README.md
.github/workflows/: ci.yml
C_Project/: CMakeLists.txt  C_Project.cbp  C_Project.depend  C_Project.layout  main.c  math_functions.c  math_functions.h  test.c
PythonProject/: main.py  test_main.py
